<resources>
    <string name="app_name">Practica2FEM</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="go_weather">Go weather</string>
    <string name="signed_out">Signed Out</string>
    <string name="status_logged">Logged</string>
    <string name="signed_in">Signed In</string>
    <string name="email_fmt">Email: %s</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="field_required">Field required.</string>
    <string name="weatherTitle">Weather on the earth</string>
    <string name="tvHistoricalWeatherTitle">Historical Weather</string>
    <string name="tvHistoricalWeatherValue">Historical Weather Value</string>
    <string name="tvActualOutsideWeatherTitle">Actual Weather outside</string>
    <string name="tvActualOutsideWeatherValue">Actual Weather outside value</string>
    <string name="tvTelemetryTitle">Telemetry Madrid</string>
    <string name="tvTempState">Estado temperatura</string>
    <string name="tvTelemetryLastTemperature">Telemetry value</string>
    <string name="tvTelemetryLastdate">-- -- ----</string>
    <string name="grados_celsius">Cº</string>



    <string name="title_activity_weather">Weather on the earth</string>
    <string name="txtLogOut">LogOut</string>
    <string name="txtOpcionGuardarConsulta">Guardar consulta</string>
    <string name="txtMadrid">Madrid</string>
    <string name="txtEnterCityName">Introduzca la ciudad</string>
    <string name="btnSeeTemperature">Ver Temperatura</string>
    <string name="txtSelectDate">Fecha historico temp</string>
    <string name="txtEnterDate">Enter Date yyyy-mm-dd</string>
    <string name="txtNoCity">Ciudad inexistente en colección de datos. Introduzca otra.</string>
    <string name="txtNoFoundSalir">"Por algun motivo no funciona el finish de la activity para volver a pantalla de log in y out"</string>
    <string name="txtNoImplementado">"No implementado"</string>

</resources>