<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/weatherTitle"
            android:textAlignment="center"
            android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvHistoricalWeatherTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvHistoricalWeatherTitle"
                android:textAlignment="center"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tvHistoricalWeatherValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvHistoricalWeatherValue"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvActualOutsideWeatherTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvActualOutsideWeatherTitle"
                android:textAlignment="center"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tvActualOutsideWeatherValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvActualOutsideWeatherValue"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTelemetryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvTelemetryTitle"
                android:textAlignment="center"
                android:textSize="12sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tvATelemetryLastTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/tvTelemetryLastTemperature"
                android:textAlignment="center"
                android:textSize="12sp" />
                <TextView
                    android:id="@+id/tvATelemetryLastTemperatureUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/grados_celsius"
                    android:textAlignment="center"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tvATelemetryLastDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:text="@string/tvTelemetryLastdate"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>