<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="9dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fieldEmail"
        android:layout_toEndOf="@+id/fieldEmail"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"

        android:layout_marginStart="-1dp"
        android:layout_marginTop="14dp"
        android:text="@string/sign_in" />
    <Button
        android:id="@+id/buttonAnonymousSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSignIn"
        android:enabled="false"
        android:text="@string/sign_out"
        android:layout_toEndOf="@+id/buttonSignIn" />
    <TextView
        android:id="@+id/statusId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/signed_out"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statusEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusId"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        tools:text="Email: none" />

    <Switch
        android:id="@+id/statusSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/statusId"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:checked="false"
        android:text="@string/status_logged" />

</RelativeLayout>